# openCLT

./: .gitignore  README.md  example.py  open_cross_layer_transcoder.py  practice_run.py  pyproject.toml  requirements.txt  run.sh  test.sh  visualization_utils.py
examples/: practice_run.py
run_6215290e-d9f0-4ef9-a0f2-f980c0dac8d8/: training_metrics.json
src/openclt/: __init__.py  open_cross_layer_transcoder.py
src/openclt/types/: __init__.py  metrics.py
