[project]
name = "openclt"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Tredal, cathK1, Nicholas Dimidik"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
datasets = "^4.0.0"
argparse = "^1.4.0"

